1st commit - app theme favicon

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FEC React Based App",
+  "name": "FEC Designer Cake React Based App",
   "icons": [
     {
       "src": "favicon.ico",
