reorganized heading per template and added moment date ojb install moment package in stead of html reference

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "homepage": "https://github.com/MercuryKTgithub/KU_BC_Group_Project_FEC_Designer_Cake_App#readme",
   "devDependencies": {
     "concurrently": "^7.2.1"
+  },
+  "dependencies": {
+    "moment": "^2.29.3"
   }
 }
